# dht-22

./: Cargo.toml  README.md  log.txt  sdkconfig.defaults
src/: main.rs
